gcc/testsuite/rust/rustc/ui/rfc-2457/mod_file_nonascii_forbidden.rs
#![feature(non_ascii_idents)]

mod řųśť; // { dg-error ".E0754." "" { target *-*-* } }
// { dg-error ".E0754." "" { target *-*-* } .-1 }

fn main() {}

